tests/error/mod_for_float_literals.c
// fail "Operator '%' is illegal for floats."

int _start(){
    
    float f = 1.0f % 1.0f;
    
    return 0;
}

